c4prj2_input/grade.txt
Grading at Thu Aug  1 12:08:12 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:2:1: error: unknown type name ‘deck_t’
 deck_t * hand_from_string(const char * str, futrue_cards_t * fc){
 ^
input.c:2:45: error: unknown type name ‘futrue_cards_t’
 deck_t * hand_from_string(const char * str, futrue_cards_t * fc){
                                             ^
input.c:32:1: error: unknown type name ‘deck_t’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
 ^
input.c:32:22: error: unknown type name ‘FILE’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                      ^
input.c:32:32: error: unknown type name ‘size_t’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                                ^
input.c:32:50: error: unknown type name ‘future_cards_t’
 deck_t ** read_input(FILE * f, size_t * n_hands, future_cards_t * fc){
                                                  ^
Compilation of input.c failed

Overall Grade: F
